[gd_scene load_steps=12 format=3 uid="uid://caqm3mnfdkd3"]

[ext_resource type="Script" path="res://Game/Enemies/Enemy.gd" id="1_dqgwq"]
[ext_resource type="Texture2D" uid="uid://b6ekc8u7p3l6i" path="res://Game/Enemies/EnemySkin/enemyBlack1.png" id="2_q8vpd"]
[ext_resource type="AudioStream" uid="uid://bwap2p75kb4ja" path="res://Sounds/SFX/EnemyDead.ogg" id="22_r08fn"]
[ext_resource type="AudioStream" uid="uid://dqdfrfk7n2qlq" path="res://Sounds/SFX/EnemyLaser.ogg" id="23_eljx0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_rdbtg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_q8vpd")
}],
"loop": true,
"name": &"level",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_aiixx"]
radius = 36.0

[sub_resource type="Animation" id="Animation_ox00c"]
resource_name = "destroy"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_or3bg"]
resource_name = "show"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k2g77"]
_data = {
"destroy": SubResource("Animation_ox00c"),
"show": SubResource("Animation_or3bg")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gc7lf"]
playback_mode = 1
random_volume_offset_db = 3.81
streams_count = 1
stream_0/stream = ExtResource("22_r08fn")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ro4mc"]
playback_mode = 1
streams_count = 1
stream_0/stream = ExtResource("23_eljx0")
stream_0/weight = 1.0

[node name="Enemy" type="Area2D" groups=["Enemy"]]
script = ExtResource("1_dqgwq")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rdbtg")
animation = &"level"
speed_scale = 0.0

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_aiixx")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k2g77")
}
autoplay = "show"

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(0, 39)

[node name="EnemyDead" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_gc7lf")

[node name="EnemyLaser" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ro4mc")

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
